Forms for adding pages and categories - as well as associated templates

--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -30,6 +30,7 @@
         {% endif %}
 
 
+        <a href = '/rango/add_category/'>Add a new Category</a>
         <a href="/rango/about/">About</a>
     </body>
 </html>
