--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -14,9 +14,12 @@
     {% else %}
         <strong>No pages in category</strong>
     {% endif %}
+     print {{ category_name_url}}
+     <a href = '/rango/category/{{ category_name_url}}/add_page/'>Add a new page</a>
 {% else %}
     The specified category {{ category_name }} does not exist
 {% endif %}
 
 </body>
 </html>
+
