--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -17,9 +17,9 @@
     {{ field }}<br>
 {% endfor %}
 <input type = "submit" name = "submit" value="Add Page" />
-
-
 </form>
-
+ <a href = '/rango/add_category/'>Add a new Category</a>
+ <a href="/rango/about/">About</a>
+ <a href = "/rango/logout/">Logout</a>
 </body>
 </html>
