--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -7,8 +7,13 @@
     <body>
         {% if user.is_authenticated %}
         <h1>Rango says...hello {{ user.username }}!</h1>
+        <a href = '/rango/add_category/'>Add a new Category</a>
+        <a href="/rango/about/">About</a>
+        <a href = "/rango/logout/">Logout</a>
         {% else %}
         <h1>Rango says relax</h1>
+        <a href = "/rango/login">Login</a>
+        <a href="/rango/register/">Register Here</a>
         {% endif %}
 
         {% if categories %}
@@ -33,9 +38,5 @@
             <strong>There are no pages present.</strong>
         {% endif %}
 
-        <a href = "/rango/login">Login</a>
-        <a href="/rango/register/">Register Here</a>
-        <a href = '/rango/add_category/'>Add a new Category</a>
-        <a href="/rango/about/">About</a>
     </body>
 </html>
