--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Rango Categories</title>
-</head>
-<body>
+{% extends "rango/base.html" %}
+
+{% block title %} {{ category_name }} {% endblock %}
+{% block body_block %}
 <h1>{{ category_name }}</h1>
- {% if category %}
     {% if pages %}
         <ul>{% for page in pages %}
         <li><a href = "{{ page.url}}">{{ page.title }}</a></li>
@@ -14,15 +11,7 @@
     {% else %}
         <strong>No pages in category</strong>
     {% endif %}
-     print {{ category_name_url}}
+     {% if user.is_authenticated %}
      <a href = '/rango/category/{{ category_name_url}}/add_page/'>Add a new page</a>
-     <br>
-</body>
-{% else %}
-    The specified category {{ category_name }} does not exist
 {% endif %}
-     <a href="/rango/about/">About</a>
-<a href = "/rango/logout/">Logout</a>
-
-</html>
-
+{% endblock %}
